--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="patches.js"></script>
     <script src="runVersion.js"></script>
 
-    <!--<script src="loadVersion.js"></script>-->
+    <script src="loadVersion.js"></script>
     <script src="build.js"></script>
     <script src="app.js"></script>
   </head>
