Added a disclamer in the README.md

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="outer-desc">
             <h1 class="center joker-title">Download</h1>
             <div class="inner-desc">
-                <span>Click here to download the <a download="patched.zip" href="game/Balatro.exe">game</a>.<br> Be careful, you <mult>must</mult> own the game to download it.</span>
+                <span>Click here to download the <a download="Balatro.exe" href="game/Balatro.exe">game</a>.<br> Be careful, you <mult>must</mult> own the game to download it.</span>
             </div>
         </div>
         
